<resources>
    <string name="app_name">Dsw Store</string>
    <string name="app_label_name">Dsw Store</string>
    <string name="shoe_inventory_store_head_text">Shoe inventory store</string>
    <string name="add_new_shoe_to_store_description">Add a new shoe</string>
    <string name="sort_by_text">Sort By</string>
    <string name="favorites_menu_text">Favorites</string>
    <string name="empty_shoe_store_text">Empty store!\nTap + to add a new shoe.</string>
    <string name="save_shoe_fragment_label_text">Save a shoe</string>
    <string name="about_shoe_fragment_label_text">About shoe</string>
    <string name="favorites_fragment_label_text">Favorites</string>
    <string name="shoe_image_text">Shoe image</string>
    <string name="take_a_photo_for_shoe_description">take a photo for shoe</string>
    <string name="remove_shoe_picture_description">remove shoe picture</string>
    <string name="enter_shoe_info_head_text">Enter shoe info</string>
    <string name="package_name_text" translatable="false">com.www.dswstore</string>
    <string name="shoe_name_edit_text">Name</string>
    <string name="shoe_price_edit_text">Price</string>
    <string name="short_description_shoe_edt">Short description</string>
    <string name="brand_name_shoe_edt">Brand name</string>
    <string name="shoe_section_header_text">Section</string>
    <string name="men_section">Men</string>
    <string name="women_section">Women</string>
    <string name="kids_section">Kids</string>
    <string name="size_shoe_head_text">Size</string>
    <string name="s_size">S</string>
    <string name="m_size">M</string>
    <string name="l_size">L</string>
    <string name="xl_size">XL</string>
    <string name="xxl_size">XXL</string>
    <string name="shoe_in_clearance">Shoe in clearance?</string>
    <string name="choose_photo_from_text">Choose photo from:</string>
    <string name="failed_to_save_photo_text">Failed to saved photo</string>
    <string name="needs_access_storage_warning">Dsw store needs to access to storage to save photo</string>
    <string name="save_photo_button_text">Save photo</string>
    <string name="view_photo_activity_label">Photo</string>
    <string name="profile_photo_label_text">Photo</string>
    <string name="empty_name_error_text">Enter a name</string>
    <string name="too_short_name_error_text">Too short</string>
    <string name="invalid_name_error_text">Invalid name</string>
    <string name="shoe_price_error_text">Enter a price</string>
    <string name="invalid_price_error_text">Invalid price</string>
    <string name="shoe_description_error_text">Description?</string>
    <string name="select_shoe_section_text">Select shoe section</string>
    <string name="select_shoe_size_text">Select shoe size</string>
    <string name="no_content_description">no description</string>
    <string name="shoe_added_successfully">Shoe added successfully</string>
    <string name="shoe_info_header_text">Shoe Info</string>
    <string name="shoe_image">shoe Image</string>
    <string name="shoe_name_holder">Name:</string>
    <string name="share">Share</string>
    <string name="edit">Edit</string>
    <string name="share_shoe_info_via_text">Share shoe info via</string>
    <string name="shoe_updated_successfully">Shoe updated successfully</string>
    <string name="delete_shoe_menu_text">Delete shoe</string>
    <string name="deleted_successfully">Deleted successfully</string>
    <string name="shoe_added_to_favorites">Added to favorites</string>
    <string name="shoe_removed_from_favorites">Removed from Favorites</string>
    <string name="favorite_shoes_header_text">Favorite shoes</string>
    <string name="empty_favorites_shoe_store_text">No favorites yet!</string>
    <string name="all_shoes">All shoes</string>
    <string name="shoe_section_text">Shoe section</string>
    <string name="shoe_size_text">Shoe size</string>
    <string name="in_clearance_text">In clearance</string>
    <string name="shoe_price_text">Shoe price</string>
</resources>