<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="AboutShoeViewModel"
            type="com.www.dswstore.ui.aboutshoe.AboutShoeViewModel" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/main_bg_app_color"
        android:paddingBottom="16dp"
        tools:context=".ui.aboutshoe.AboutShoeFragment">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/shoe_image"
                    android:layout_width="185dp"
                    android:layout_height="170dp"
                    android:layout_marginTop="16dp"
                    android:contentDescription="@string/shoe_image"
                    android:src="@drawable/shoe_128"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:shoeImageCircular="@{AboutShoeViewModel.shoePicturePath}"
                    tools:src="@drawable/shoe_128" />

                <androidx.cardview.widget.CardView
                    android:id="@+id/main_header"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/shoe_image">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/white"
                        android:fontFamily="@font/lato_heavy"
                        android:gravity="center"
                        android:padding="8dp"
                        android:text="@string/shoe_info_header_text"
                        android:textAppearance="?android:textAppearanceMedium"
                        android:textColor="@color/content_header_color"
                        tools:text="@string/shoe_info_header_text" />
                </androidx.cardview.widget.CardView>

                <LinearLayout
                    android:id="@+id/shoe_buttons_head"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:baselineAligned="false"
                    android:orientation="horizontal"
                    app:layout_constraintTop_toBottomOf="@id/main_header">

                    <com.balysv.materialripple.MaterialRippleLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="4dp"
                        android:layout_marginRight="4dp"
                        android:layout_weight="1"
                        android:background="@drawable/button_round_colored"
                        app:mrl_rippleColor="@color/colorPrimaryDark"
                        app:mrl_rippleHover="true"
                        app:mrl_rippleOverlay="true"
                        app:mrl_rippleRoundedCorners="20dp">

                        <Button
                            android:id="@+id/editShoeInfoBtn"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@android:color/transparent"
                            android:text="@string/edit"
                            android:textColor="@android:color/white"
                            android:textStyle="bold" />

                    </com.balysv.materialripple.MaterialRippleLayout>

                    <com.balysv.materialripple.MaterialRippleLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="4dp"
                        android:layout_marginLeft="4dp"
                        android:layout_weight="1"
                        android:background="@drawable/button_round_colored"
                        app:mrl_rippleColor="@color/colorPrimaryDark"
                        app:mrl_rippleHover="true"
                        app:mrl_rippleOverlay="true"
                        app:mrl_rippleRoundedCorners="20dp">

                        <Button
                            android:id="@+id/shareShoeInfoBtn"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@android:color/transparent"
                            android:text="@string/share"
                            android:textColor="@android:color/white"
                            android:textStyle="bold" />

                    </com.balysv.materialripple.MaterialRippleLayout>

                </LinearLayout>

                <androidx.cardview.widget.CardView
                    android:id="@+id/shoe_info_box"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    app:layout_constraintTop_toBottomOf="@id/shoe_buttons_head">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:padding="8dp">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@color/white"
                            android:fontFamily="@font/lato_medium"
                            android:gravity="start"
                            android:padding="8dp"
                            android:text="@{AboutShoeViewModel.shoeName}"
                            android:textAppearance="?android:textAppearanceMedium"
                            android:textColor="@color/about_content_color"
                            tools:text="Name: shoe name" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@color/white"
                            android:fontFamily="@font/lato_medium"
                            android:gravity="start"
                            android:padding="8dp"
                            android:text="@{AboutShoeViewModel.shoePriceText}"
                            android:textAppearance="?android:textAppearanceMedium"
                            android:textColor="@color/about_content_color"
                            tools:text="Price: shoe price" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@color/white"
                            android:fontFamily="@font/lato_medium"
                            android:gravity="start"
                            android:padding="8dp"
                            android:text="@{AboutShoeViewModel.shoeBrandName}"
                            android:textAppearance="?android:textAppearanceMedium"
                            android:textColor="@color/about_content_color"
                            tools:text="Brand name: shoe brand" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@color/white"
                            android:fontFamily="@font/lato_medium"
                            android:gravity="start"
                            android:padding="8dp"
                            android:text="@{AboutShoeViewModel.shoeDescription}"
                            android:textAppearance="?android:textAppearanceMedium"
                            android:textColor="@color/about_content_color"
                            tools:text="Short description: description" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@color/white"
                            android:fontFamily="@font/lato_medium"
                            android:gravity="start"
                            android:padding="8dp"
                            android:text="@{AboutShoeViewModel.shoeSection}"
                            android:textAppearance="?android:textAppearanceMedium"
                            android:textColor="@color/about_content_color"
                            tools:text="Section: Men" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@color/white"
                            android:fontFamily="@font/lato_medium"
                            android:gravity="start"
                            android:padding="8dp"
                            android:text="@{AboutShoeViewModel.shoeSize}"
                            android:textAppearance="?android:textAppearanceMedium"
                            android:textColor="@color/about_content_color"
                            tools:text="Size: S" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@color/white"
                            android:fontFamily="@font/lato_medium"
                            android:gravity="start"
                            android:padding="8dp"
                            android:text="@{AboutShoeViewModel.shoeInClearance}"
                            android:textAppearance="?android:textAppearanceMedium"
                            android:textColor="@color/about_content_color"
                            tools:text="In clearance: Yes" />

                    </LinearLayout>
                </androidx.cardview.widget.CardView>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.core.widget.NestedScrollView>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>